<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activty标题栏 -->
    <string name="app_name">课程表</string>
    <string name="timetable_settings">课程表设置</string>
    <string name="settings">设置</string>
    <string name="add_curriculum">添加课程</string>
    <string name="mag_course">科目管理</string>
    <string name="mag_build">教学楼管理</string>
    <string name="oth_set">其他设置</string>
    <string name="time_set">时间设置</string>
    <string name="total_curriculum">总课表</string>
    
    <!-- fragment 标题 -->
 	<string name="add_exam">添加考试</string>
 	
    <!-- 课程表activity -->
    <string name="main_delete_curriculums_title">清空课表提示</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="delete_success">删除成功</string>
    <string name="mark_curriculum">打卡</string>
    <string name="share_curriculum">分享</string>
    
    <!-- 添加课程activity -->
    <string name="add_curriculum_weeksIsNull">所选的上课周数实际上为空，请重新选择。</string>
    <string name="curriculums_weeks_conflict">上课时间与其它课程存在冲突，请修改之后再保存。</string>
    <string name="add_curriculum_courseIsNull">科目为空，请先在设置中添加科目。</string>
    <string name="add_curriculum_buildingIsNull">教学楼为空，请先在设置中添加教学楼。</string>
    <string name="add_curriculum_addSuccess">添加课程成功。</string>
    <string name="add_curriculum_addFailure">添加课程失败。</string>
    
    <!-- 管理教学楼、管理科目 activity -->
    <string name="get_data_error">获取数据错误。</string>
    <string name="set_course_beRef">科目在课表当中被引用，无法删除。</string>
    <string name="course_couldnot_null">科目不能为空</string>
    <string name="add_success">添加成功</string>
    <string name="add_course">添加科目</string>
    <string name="add_buliding">添加教学楼</string>
    <string name="name_couldnot_null">名字不能为空</string>
    <string name="set_building_beRef">教学楼在课表当中被引用，无法删除。</string>
    
    <!-- 课程编辑 -->
    <string name="edit_success">修改成功</string>
    <string name="edit_failure">修改失败</string>
    
    <string name="menu_backup">备份</string>
    <string name="menu_restore">恢复</string>
    <string name="save">保存</string>
    <string name="refresh">刷新</string>
    <string name="week">星期</string>
    <string name="time">时间</string>
    <string name="course">科目</string>
    <string name="teacher">老师</string>
    <string name="place">地点</string>
    <string name="building">教学楼</string>
    <string name="roomnum">课室号</string>
    <string name="weeks">周数</string>
    <string name="weekOfTerm">当前周</string>
    <string name="classOneday">课程数量</string>
    <string name="classLastMin">课程时间</string>
    <string name="breakMin">课间时间</string>
    <string name="from">从</string>
    <string name="to">至</string>
    <string name="remind">提醒</string>
    
    <string name="remark">备注</string>
    <string name="signed">已签到</string>
    <string name="clear">清除</string>
    <string name="othset">其他设置</string>
    <string name="notification">notification</string>
    <string name="auto_mute">automute</string>
    <string name="mute_mode">mutemode</string>
    <string name="cls_brk_time">上下课时间</string>
    
    <string name="add_curriculum_ok">确定添加</string>
    <string name="add_curriculum_cancel">放弃添加</string>
    <string name="edit_curriculum_ok">确定修改</string>
    <string name="edit_curriculum_cancel">放弃修改</string>
    
    
    <string name="main_delete_courses_title">清空科目提示</string>
    <string name="main_delete_buildings_title">清空教学楼提示</string>
    <string name="main_delete_allCurriculums">本操作将删除所有课程，并且不可恢复，请确认是否真的要清空课表？</string>
    <string name="add_curriculum_odd">单周</string>
    <string name="add_curriculum_even">双周</string>
    <string name="add_curriculum_all">全部</string>
    
    
    <string name="next_time_picker">下一步</string>
    
    
    <string name="building_list">教学楼列表</string>
    <string name="stat_info">签到与成绩分析</string>
    
    
    <string name="alert_dialog_buildingname">教学楼名字：</string>
    <string name="alert_dialog_addCourse">添加科目</string>
    <string name="alert_dialog_editCourse">修改科目</string>
    <string name="alert_dialog_coursename">科目名称：</string>
    <string name="alert_dialog_teachername">授课老师：</string>
    <string name="settings_xml_allweeks">本学期周数</string>
    <string name="settings_xml_nowweek">当前第几周</string>
    <string name="settings_xml_classCount">一天几节课</string>
    <string name="settings_xml_building">教学楼名称</string>
    <string name="add">添加</string>
    <string name="settings_xml_courses">本学期科目</string>
    <string name="settings_xml_classTime">每节课时间</string>
    <string name="class_time">上课时间</string>
    <string name="break_time">下课时间</string>
    <string name="settings_classTime_failure">设置没有保存，因为上课时间必须早于下课时间。</string>
    <string name="set_building">教学楼设置</string>
    <string name="set_course">科目设置</string>
    <string name="set_building_hint">请输入教学楼名</string>
    <string name="set_course_hint1">科目名称</string>
    <string name="set_course_hint2">授课老师</string>
    <string name="set_nick_hint2">课程简称</string>
    <string name="edit_building">修改教学楼</string>
    <string name="set_weeks">请输入本学期周数（1～25）</string>
    <string name="set_weeks_failure">貌似没有一学期超过25周的学校吧。</string>
    <string name="set_curweek_failure">超过了本学期最大周数</string>
    <string name="set_day_class">请输入一天的课时数</string>
    <string name="empty_error">输入为空</string>
    <string name="u_have_signed">你已经签过到了</string>
    <string name="sign_success">打卡成功</string>
	<string name="sign_failure">打卡失败</string>
	<string name="can_not_sign">当前课程无法签到</string>
    <string name="the_time_can_not_do">请在课程时间范围内执行此操作</string>
    
    <!-- 添加考试的activity -->
	<string name="exam_place_setting">地点设置</string>    
	<string name="comfirm_exam">请确认该课程现在是否有考试，确定请点击继续！</string>    
    <string name="edit_course">修改课程</string>
    
    <string name="set_exam_scores">输入考试成绩</string>
    <string name="set_exam_tols">输入科目总分</string>
    <string name="show_curriculum">查看课程</string>
    <string name="edit_curriculum">编辑课程</string>
    <string name="add_exam_cancel">放弃</string>
    <string name="add_exam_ok">确定</string>
    
    
    
    <string name="class_remind">上课提醒</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="ring_remind_time">提醒时间</string>
    <string name="ring_stop_ring">停止闹钟</string>
    <string name="ring_open_table">打开课程表</string>
    
    <string name="author_blog"></string>
    
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    
    <string name="class1">第一节</string>
    <string name="class2">第二节</string>
    <string name="class3">第三节</string>
    <string name="class4">第四节</string>
    <string name="class5">第五节</string>
    <string name="class6">第六节</string>
    <string name="class7">第七节</string>
    <string name="class8">第八节</string>
    <string name="class9">第九节</string>
    <string name="class10">第十节</string>
    <string name="class11">第十一节</string>
    <string name="class12">第十二节</string>
    <string name="class13">第十三节</string>

</resources>