<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/holo_blue_light">
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Small"/>
    </LinearLayout>
	<ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
	    <GridView android:id="@+id/total_gridview"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:verticalSpacing="1dp"
	    	android:horizontalSpacing="1dp"
			android:paddingTop="1dp"
	    	android:gravity="center"
	    	android:numColumns="auto_fit"
	    	android:scrollbars="vertical"
	    	android:background="#DCDCDC">
	        
	    </GridView>
   	</ScrollView>
</LinearLayout>