<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <EditText
        android:id="@+id/set_course_edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_course_hint1"
        android:singleLine="true"
        android:padding="15dp"/>

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <EditText android:id="@+id/set_course_edit3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/set_nick_hint2"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:padding="15dp" />
	    <EditText 
	        android:id="@+id/set_course_edit2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/set_course_hint2"
	        android:singleLine="true"
	        android:layout_weight="1"
	        android:padding="15dp"/>
	</LinearLayout>    
    
    
</LinearLayout>