<?xml version="1.0" encoding="utf-8"?>
<!-- 让布局可以滑动 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
        
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp">
    
    <!-- 科目与星期的spinner -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            <!-- 科目、星期标题栏-->
		    <TextView android:text="@string/course"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
		    <TextView android:text="@string/week"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
        </LinearLayout>
        
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <Spinner android:id="@+id/add_curriculum_course_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
	        
	        <Spinner android:id="@+id/add_curriculum_day_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
        </LinearLayout>
        
    </LinearLayout>
    
    
    <!-- 教学楼与教室号的spinner -->
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">

		    <TextView android:text="@string/building"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
		    <TextView android:text="@string/roomnum"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
        </LinearLayout>
        
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <Spinner android:id="@+id/add_curriculum_building_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
	        
	        <EditText android:id="@+id/add_curriculum_roomnum_editText2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:singleLine="true"/>
        </LinearLayout>
        
    </LinearLayout>
    
	
	
	<!-- 上课周数与上课时间 -->
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        
	    
	    <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        
            <TextView android:text="@string/from"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
            
            <TextView android:text="@string/to"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/gray"
		        android:textAppearance="@android:style/TextAppearance.Small"/>
            
		    
        </LinearLayout>
	    
	    
	    <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">

	        <Spinner android:id="@+id/add_curriculum_weekStart_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
	        
	        <Spinner android:id="@+id/add_curriculum_weekEnd_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
	        
		    
        </LinearLayout>
        
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        
	        <TextView android:text="@string/time"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:textColor="@color/gray"
			        android:textAppearance="@android:style/TextAppearance.Small"/>
            
	        <TextView android:text="@string/remind"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:textColor="@color/gray"
			        android:textAppearance="@android:style/TextAppearance.Small"/>
	        
	        
        </LinearLayout>
        <LinearLayout 
     		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        
	        <Spinner android:id="@+id/add_curriculum_classStart_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
	        
	        
	        <Spinner android:id="@+id/add_curriculum_reminder_spinner2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"/>
        </LinearLayout>
        
        <RadioGroup
            android:id="@+id/add_curriculum_week_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/add_curriculum_odd_radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_curriculum_odd" 
                android:textAppearance="@android:style/TextAppearance.Small"/>

            <RadioButton
                android:id="@+id/add_curriculum_even_radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_curriculum_even"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <RadioButton
                android:id="@+id/add_curriculum_all_radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_curriculum_all" 
                android:textAppearance="@android:style/TextAppearance.Small"/>
        </RadioGroup>
        
    </LinearLayout>
    
    
    <!-- 备注 -->
	<LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView android:text="@string/remark"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/gray"
		    android:textAppearance="@android:style/TextAppearance.Small"/>
        <EditText
            android:id="@+id/add_curriculum_remark_edit2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false" />
	    
	</LinearLayout>
	
	
</LinearLayout>

</ScrollView>